<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:id="@+id/register_activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/purple"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="108dp"
        android:layout_height="35dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/action_sign_up"
        android:textColor="#707070"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/full_name"
        android:paddingHorizontal="17dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/email"
        android:paddingHorizontal="17dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="17dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <EditText
        android:id="@+id/retype_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:paddingLeft="17dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_purple"
        android:text="@string/action_sign_up"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retype_password" />

    <TextView
        android:id="@+id/textViewAccount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textColor="#585858"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="562dp" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/action_sign_in"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:focusable="true" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow2"
        android:layout_width="194dp"
        android:layout_height="13dp"
        android:layout_marginTop="20dp"
        app:constraint_referenced_ids="textViewAccount2,signInTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />


</androidx.constraintlayout.widget.ConstraintLayout>