...
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
...
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="16sp"
        android:paddingHorizontal="17dp"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_purple"
        android:text="@string/action_sign_in"
...
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        android:textColor="#585858"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/action_sign_up"
        android:textColor="@color/green"
...
