...

    <item
        android:id="@+id/placeholder"
        android:title=""/>

    <item
        android:id="@+id/ic_account"
        android:title=""
        android:icon="@drawable/ic_account"/>
</menu>
