<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindFriends">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_find_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_find_friend_input"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="Find friends"
            android:outlineSpotShadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginStart="45dp"/>

        <ImageButton
            android:id="@+id/find_friends_btn"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/ic_search" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_find_friends"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/user_card_add"/>


</androidx.constraintlayout.widget.ConstraintLayout>